syntax = "proto3";
package influxdata.iox.management.v1;

message OperationMetadata {
  // How many nanoseconds of CPU time have been spent on this job so far?
  uint64 cpu_nanos = 1;

  // How many nanoseconds has it been since the job was submitted
  uint64 wall_nanos = 2;

  // How many total tasks does this job have currently
  uint64 task_count = 3;

  // How many tasks for this job are still pending
  uint64 pending_count = 4;

  // What kind of job is it?
  oneof job {
    Dummy dummy = 5;
    /* historical artifact
    PersistSegment persist_segment = 6;
    */
    CloseChunk close_chunk = 7;
    WriteChunk write_chunk = 8;
    WipePreservedCatalog wipe_preserved_catalog = 9;
  }
}

// A job that simply sleeps for a specified time and then returns success
message Dummy {
  // How long the job should sleep for before returning
  repeated uint64 nanos = 1;
}

// Move a chunk from mutable buffer to read buffer
message CloseChunk {
  // name of the database
  string db_name = 1;

  // partition key
  string partition_key = 2;

  // table name
  string table_name = 4;

  // chunk_id
  uint32 chunk_id = 3;
}

// Write a chunk from read buffer to object store
message WriteChunk {
  // name of the database
  string db_name = 1;

  // partition key
  string partition_key = 2;

  // table name
  string table_name = 4;

  // chunk_id
  uint32 chunk_id = 3;
}

// Wipe preserved catalog
message WipePreservedCatalog {
  // name of the database
  string db_name = 1;
}